# project-minor

./: .env  README.md  bash.exe.stackdump  package-lock.json  package.json  pyproject.toml  tsconfig.json
minor/: models.py  views.py
minor/static/assets/: index.42c97b28.js  index.6a82c693.css  vendor.31c930c5.js
minor/templates/: index.html
my-app/: README.md
mysite/: settings.py  urls.py
public/: index.html
src/: ;  App.tsx  UserContext.tsx  bash.exe.stackdump  index.tsx  useToken.tsx
src/assets/: index.tsx
src/components/: Elements.tsx  Footer.tsx  Loader.tsx  Modal.tsx  Nav.tsx  Sidebar.tsx  index.tsx
src/components/home/: CustomerContainer.tsx  HeadingContainer.tsx  ImageContainer.tsx  Nav.tsx
src/data/: index.ts  shop.ts
src/pages/: Dashboard.tsx  Result.tsx  Shop.tsx  SignUp.tsx  index.tsx
src/utils/: colors.ts  index.ts  themes.ts  typography.ts
