[tool.poetry]
name = "project-minor-1"
version = "0.1.0"
description = ""
authors = ["youngsterjaidev <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
